DC21-192: fixed overflow via table-layut: fixed

--- a/app/assets/stylesheets/master.sass
+++ b/app/assets/stylesheets/master.sass
@@ -1052,6 +1052,7 @@ tbody tr.field_bg
 /* Specific cell types to balance width - View Access Requests
 
 #access_requests, #experiments
+  table-layout: fixed
   th.firstname, td.firstname
     +width(140px, 140px, 140px)
   th.lastname, td.lastname
